--- a/src/Components/LandingPage.module.css
+++ b/src/Components/LandingPage.module.css
@@ -11,6 +11,12 @@
     display: flex;
     align-items: center;
 }
+.noItemsMessage {
+    font-size: 1.5rem;
+    color: red;
+    text-align: center;
+    margin-top: 20px;
+}
 
 .title {
     font-size: 16px;
